--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,14 @@
     background-color: #525252;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
+.bg-color-work-history{
+    background-color: #9b59b6;
+}
+
 /* ----------- Padding / Margins / Text ------------- */
 
 h1,
@@ -33,7 +41,7 @@ h2,
 h3,
 h4 {
     margin: 0;
-    
+
 }
 
 .uppercase {
@@ -42,12 +50,12 @@ h4 {
 
 .general-sub {
     font-family: "exo", sans-serif;
-    font-weight:300;
-    color:#fafafa;
+    font-weight: 300;
+    color: #fafafa;
 }
 
-.inline-block{
-    display:inline-block;
+.inline-block {
+    display: inline-block;
 }
 
 .section-column {
@@ -56,11 +64,11 @@ h4 {
     display: table-cell;
 }
 
-.row-table{
+.row-table {
     display: table;
 }
 
-.section-heading{
+.section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
@@ -90,7 +98,7 @@ header {
 }
 
 .name {
-    font-family: "exo", sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
@@ -131,7 +139,7 @@ header {
     padding-top: 22px;
     display: block;
     color: #fafafa;
-    font-size: 22px;
+    font-size: 26px;
 }
 
 .menuitem span {
@@ -154,21 +162,21 @@ header {
 
 /* ---------- Footer -------------*/
 
-footer{
+footer {
     background-color: #525252;
     color: #fafafa;
     min-height: 120px;
 }
 
-footer .cv-pdf i{
-    color:#fafafa;
+footer .cv-pdf i {
+    color: #fafafa;
     text-align: center;
     font-size: 18px;
     padding-left: 5px;
-    
+
 }
 
-footer .cv-pdf i:hover{
+footer .cv-pdf i:hover {
     color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
@@ -176,12 +184,12 @@ footer .cv-pdf i:hover{
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links{
+.social-links {
     padding-bottom: 15px;
-    
+
 }
 
-.social-links li a i{
+.social-links li a i {
     height: 32px;
     width: 32px;
     padding: 12px 0;
@@ -197,10 +205,135 @@ footer .cv-pdf i:hover{
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links li a i:hover{
-    background:#e84610;
+.social-links li a i:hover {
+    background: #e84610;
 }
 
-#footer-details{
+#footer-details {
     margin: 20px;
 }
+
+/* ----------- Three reasons ------------- */
+
+.three-reasons-icons {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+}
+
+/* ----------- Personal info ------------- */
+
+.personal-info-item{
+    margin-bottom: 20px;
+    display:block;
+    clear:both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value{
+    padding-right: 8px;
+    
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p{
+    margin: 0;
+    
+}
+
+.personal-info-item .key{
+    display: inline-block;
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p{
+    font-weight: 700;
+}
+
+.personal-info-item .value{
+    display: inline-block;
+    position: relative;
+    width:60%;
+}
+
+/* ----------- Skills ------------- */
+
+.progress{
+    position: relative;
+    height:25px;
+    
+}
+
+.progress-type{
+    position:absolute;
+    left:0;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25,25,25,0.2);
+}
+
+.progress-section{
+    margin: 40px 20px;
+}
+
+/* ----------- Work History ------------- */
+
+.timeline-item{
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p{
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item::before{
+    content: attr(dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: .8em;
+    padding:0;
+    margin: 0;
+}
+
+.timeline-item::after{
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content:'';
+    background: #fafafa;
+}
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
+/* ----------- Media Queries ------------- */
+
+@media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+}
+
